--- a/css/lib/scrollbar/jquery.mCustomScrollbar.css
+++ b/css/lib/scrollbar/jquery.mCustomScrollbar.css
@@ -97,7 +97,7 @@ VERTICAL SCROLLBAR
 	.mCSB_scrollTools .mCSB_buttonDown{
 		display: block;
 		position: absolute;
-		height: 20px;
+		height: 10px;
 		width: 100%;
 		overflow: hidden;
 		margin: 0 auto;
@@ -167,7 +167,7 @@ Horizontal Scrollbar
 	.mCSB_scrollTools.mCSB_scrollTools_horizontal .mCSB_buttonRight{
 		display: block;
 		position: absolute;
-		width: 20px;
+		width: 10px;
 		height: 10px;
 		overflow: hidden;
 		margin: 0 auto;
@@ -310,24 +310,23 @@ Scroll bar Colors and Background
 		background-color: #fff; background-color: rgba(255,255,255,0.9);
 		filter: "alpha(opacity=90)"; -ms-filter: "alpha(opacity=90)"; 
 	}
-
-
-	.mCSB_scrollTools .mCSB_buttonLeft,
-	.mCSB_scrollTools .mCSB_buttonRight{
-		background-image: url(../../../img/icons/v-scroll-arrow.png); 
-		background-repeat: no-repeat;
-		 background-size: auto 10px;
+.mCSB_scrollTools .mCSB_buttonLeft {
+    background-color: #ebebeb;
+    background-image: url("../../../img/icons/h-scroll-left.svg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: auto 10px;
+}
 	
+	.mCSB_scrollTools .mCSB_buttonRight{
+	
+	 background-color: #ebebeb;
+    background-image: url("../../../img/icons/h-scroll-right.svg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: auto 10px;
 	}
 	
-		.mCSB_scrollTools .mCSB_buttonUp,
-	.mCSB_scrollTools .mCSB_buttonDown{background-image: url(../../../img/icons/h-scroll-arrow.png); 
-		background-repeat: no-repeat; background-size: 10px auto;}
-
-
-	
-
-
 
 	.mCS-dark.mCSB_scrollTools .mCSB_draggerRail{ background-color: #000; background-color: rgba(0,0,0,0.15); }
 
@@ -676,21 +675,25 @@ Scroll bar Colors and Background
 		
 	}
 	
-	.mCS-3d.mCSB_scrollTools .mCSB_buttonUp{ background-position: 0 -13px }
+	.mCS-3d.mCSB_scrollTools .mCSB_buttonUp{   	
+	    background-color: #ebebeb;
+    background-image: url("../../../img/icons/v-scroll-top.svg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: auto 10px;}
 	
 	.mCS-3d.mCSB_scrollTools .mCSB_buttonDown {
-		background-position: 0 0;
-		bottom: 10px;
+		 background-color: #ebebeb;
+    background-image: url("../../../img/icons/v-scroll-bottom.svg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: auto 10px;
+		bottom: 0px;
 		height: 10px;
 	}
 
-.mCS-3d.mCSB_scrollTools .mCSB_buttonLeft {
-    background-position: -13px 0
-}
-	.mCS-3d.mCSB_scrollTools .mCSB_buttonRight {
-    background-position:10px 0px;
-}
-	
+
+
 	/* theme "3d-dark" */
 	
 	.mCS-3d-dark.mCSB_scrollTools .mCSB_draggerRail{
